Partially working omniauth and google api

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -65,6 +65,7 @@ html
             .container
               ul.nav-list.nav-main
                 li.descendant = link_to 'Events', events_path
+                li.descendant = link_to "Post to Google Calendar", "/auth/google_oauth2"
 
 
     #body
