--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -65,7 +65,8 @@ html
             .container
               ul.nav-list.nav-main
                 li.descendant = link_to 'Events', events_path
-                li.descendant = link_to "Post to Google Calendar", "/auth/google_oauth2"
+                li.descendant = link_to 'New Events', new_event_path
+                li.descendant = link_to "Post to Google Calendar Directly", "/auth/google_oauth2"
 
 
     #body
@@ -77,5 +78,6 @@ html
     footer#footer
     = include_gon
     = javascript_include_tag "biola/header"
+    = javascript_include_tag "application"
     = yield :extra_javascript
 
