Passing service account calendar event post

--- a/app/views/events/create.html.slim
+++ b/app/views/events/create.html.slim
@@ -1,4 +1,4 @@
 .container.page
   .white-shadowed-panel.no-pad
-    = debug @auth
-    = debug @result.try(:data)
+    = debug @cal.request
+    = debug @cal.response
